responsive de 320px, add imagenes instad of numbers

--- a/Dev/index.html
+++ b/Dev/index.html
@@ -4,14 +4,14 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>Juego de memoria</title>
 </head>
 <body>
 	<div class="content-flex">
 		<section class="section1">
-			<h1>Juego de memoria</h1>
+			<h1>🧠 Juego de memoria</h1>
 			<table>
 				<tr>
 					<td><button id="0" onclick="destapar(0)"></button></td>
